// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`writer > outputs json > outputs multiple data 1`] = `
"{
  "t1": {
    "foo": "bar"
  },
  "t2": {
    "baz": "xyz"
  }
}"
`;

exports[`writer > outputs json > outputs single data 1`] = `
"{
  "foo": "bar"
}"
`;

exports[`writer > outputs json > outputs single data with title 1`] = `
"{
  "foo": "bar"
}"
`;

exports[`writer > outputs table > outputs multiple data 1`] = `
"T1
┌─────┐
│ Foo │
├─────┤
│ bar │
└─────┘
T2
┌─────┐
│ Baz │
├─────┤
│ xyz │
└─────┘
"
`;

exports[`writer > outputs table > outputs single data 1`] = `
"┌─────┐
│ Foo │
├─────┤
│ bar │
└─────┘
"
`;

exports[`writer > outputs table > outputs single data with title 1`] = `
"baz
┌─────┐
│ Foo │
├─────┤
│ bar │
└─────┘
"
`;

exports[`writer > outputs table > outputs table with custom renderer 1`] = `
"T1
┌──────────────┐
│ Foo          │
├──────────────┤
│ Here is: bar │
└──────────────┘
"
`;

exports[`writer > outputs yaml > outputs multiple data 1`] = `
"t1:
  foo: bar
t2:
  baz: xyz
"
`;

exports[`writer > outputs yaml > outputs single data 1`] = `
"foo: bar
"
`;

exports[`writer > outputs yaml > outputs single data with title 1`] = `
"foo: bar
"
`;
